--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link">Ru</a>
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
         <main class="content">
             <section class="lead">
-                <h1 class="lead__title">Путешествия по России</h1>
+                <h1 class="lead__title">Путешествия по&nbsp;России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="Калегин Михаил">
                 <p class="lead__caption">ваша полка — верхняя</p>
@@ -51,7 +51,7 @@
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a class="place__link" href="">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
@@ -63,7 +63,7 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a class="place__link" href="">National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
@@ -75,7 +75,7 @@
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a class="place__link" href="">YouTube</a>
                     </div>
                     <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
@@ -87,7 +87,7 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a class="place__link" href="">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
@@ -99,7 +99,7 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a class="place__link" href="">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
